# ABC_IDZ_4

./: CMakeLists.txt  main.cpp  readme.md
examples/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt
field/: Field.cpp  Field.h  FieldIterable.cpp  FieldIterable.h
gardener/: Gardener.h
io/: Output.cpp  Output.h  input.cpp  input.h
task_v1/: Task.cpp  Task.h  solution.cpp  solution.h
task_v2/: Task.cpp  Task.h  solution.cpp  solution.h
task_v2/TrafficGuard/: GardenerQueue.cpp  GardenerQueue.h  TrafficGuard.cpp  TrafficGuard.h
